Updated project layouts 2 and 3

--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -67,11 +67,16 @@ p {
 }
 
 a {
+  color: #7dbeff;
+  font-size: 0.7em;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0;
   text-decoration: none;
 }
 
 a:visited {
-  color: pink;
+  color: #5a5a5a;
 }
 
 #grid {
