--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -141,10 +141,15 @@ p {
 }
 
 a {
-  color: rgba(91, 196, 238, 0.753);
+    color: rgb(125, 190, 255);
+    font-size: #{$h4-size - 0.3};
+    font-family: $font-accent;
+    font-weight: 400;
+    letter-spacing: 0;
+    text-decoration: none;
 }
 a:visited {
-  color: pink;
+  color: rgb(90, 90, 90);
 }
 
 .galleryNav {
@@ -291,7 +296,7 @@ h4 {
         //width:100vw;
         //flex-grow: 1;
         object-fit: contain;
-        margin: 1em;
+        margin: 0 auto;
         width: inherit;
     }
 }
@@ -305,6 +310,7 @@ h4 {
     img {
         max-height: 29vw;
         width: auto;
+        margin: 1em;
     }
 }
 
