--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -23,6 +23,7 @@ body {
   height: auto;
   width: 100vw;
   margin: 0;
+  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -155,7 +156,7 @@ a:visited {
   opacity: 1;
   z-index: 10;
   position: absolute;
-  left: 30vw;
+  left: 32vw;
   top: 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
@@ -166,7 +167,7 @@ a:visited {
   opacity: 1;
   z-index: 0;
   position: absolute;
-  left: 30vw;
+  left: 32vw;
   top: 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
@@ -175,7 +176,7 @@ a:visited {
 
 .galleryImg {
   height: 100vh;
-  width: 70vw;
+  width: 68vw;
   -o-object-fit: cover;
      object-fit: cover;
   overflow: hidden;
@@ -204,7 +205,7 @@ a:visited {
   position: absolute;
   margin-right: 25vw;
   top: 30vh;
-  left: 10vw;
+  left: 8vw;
   height: auto;
   width: auto;
   display: -webkit-box;
