--- a/3_project_style.css
+++ b/3_project_style.css
@@ -73,10 +73,20 @@ h4 {
   top: 50vh;
 }
 
+h5 {
+  font-size: 0.8em;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  letter-spacing: .15em;
+  margin: 0;
+  text-transform: uppercase;
+}
+
 p {
   font-size: 1.2em;
   font-weight: 300;
   margin: 0;
+  line-height: 1.35em;
 }
 
 a {
@@ -154,7 +164,7 @@ a:visited {
           transform: translateZ(-0.3px) translateX(0) scale(1.3);
 }
 
-img {
+img, video {
   -webkit-transform: translateZ(-0.2px) translateX(0) scale(1.2);
           transform: translateZ(-0.2px) translateX(0) scale(1.2);
 }
@@ -225,7 +235,7 @@ h4 {
           justify-content: space-between;
 }
 
-.card img {
+.card img, .card video {
   -o-object-fit: contain;
      object-fit: contain;
   margin: 0 auto;
@@ -244,7 +254,7 @@ h4 {
   width: inherit;
 }
 
-.flexTwo img {
+.flexTwo img, .flexTwo video {
   max-height: 29vw;
   width: auto;
   margin: 1em;
@@ -258,8 +268,8 @@ h4 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 30em;
-  padding: 10em 8em;
+  max-width: 35em;
+  padding: 10em 1em;
   margin: 0 auto;
   text-align: center;
 }
