--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -134,10 +134,20 @@ h4 {
     left: 45vw;
     top: 50vh;
 }
+h5 {
+    font-size: #{$h4-size - 0.2};
+    font-family: $font-accent;
+    font-weight: 400;
+    letter-spacing: .15em;
+    margin: 0;
+    text-transform: uppercase;
+}
 p {
     font-size: $p-size;
     font-weight: 300;
     margin:0;
+
+    line-height: 1.35em;   
 }
 
 a {
@@ -229,7 +239,7 @@ $duration-page: 1s;
 .flexText {
     @include parallax(-.3);
 }
-img {
+img,video {
     @include parallax(-.2);
 }
 h1 {
@@ -292,7 +302,7 @@ h4 {
     p {
 
     }
-    img {
+    img,video {
         //width:100vw;
         //flex-grow: 1;
         object-fit: contain;
@@ -307,7 +317,7 @@ h4 {
     justify-content: space-between;
     width: inherit;
 
-    img {
+    img,video {
         max-height: 29vw;
         width: auto;
         margin: 1em;
@@ -318,9 +328,8 @@ h4 {
     display: flex;
     flex-direction: column;
 
-    width: 30em;
-    //padding: 8em 4em 0 12em;
-    padding: 10em 8em;
+    max-width: 35em;
+    padding: 10em 1em;
     margin: 0 auto;
 
     text-align: center;
