--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -46,7 +46,6 @@ h1 {
 
 h2 {
   font-size: 3em;
-  font: font-style font-variant font-weight 3em/line-height font-family;
 }
 
 h3 {
@@ -60,6 +59,10 @@ h4 {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   letter-spacing: .25em;
+}
+
+h5 {
+  font-size: 3em;
 }
 
 p {
@@ -89,6 +92,99 @@ a:visited {
       grid-template-rows: repeat(7, 6em);
   -ms-grid-row-align: center;
       align-self: center;
+}
+
+/* ANNOUNCEMENT */
+/* ANNOUNCEMENT */
+/* ANNOUNCEMENT */
+.lockScrolling {
+  overflow: hidden;
+}
+
+.show {
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+.heyThere {
+  visibility: hidden;
+  opacity: 0;
+  z-index: 200;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  color: grey;
+  background: white;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.8) 100%);
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: visible;
+  -webkit-transition: opacity 1s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: opacity 1s cubic-bezier(0.5, 0.2, 0.15, 1);
+}
+
+.heyThere h2 {
+  visibility: inherit !important;
+  opacity: inherit !important;
+}
+
+.heyThere p {
+  visibility: inherit !important;
+  opacity: inherit !important;
+  margin: 0 auto;
+  padding: 1em;
+  max-width: 25em;
+}
+
+.continueBtn {
+  position: relative;
+  color: grey;
+}
+
+.continueBtn h3 {
+  font-size: 2em;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  letter-spacing: .15em;
+  font-variant: all-small-caps;
+}
+
+.continueBtn svg {
+  position: relative;
+  top: -4.6em;
+  left: -.2em;
+  margin-top: 0;
+  width: 16.5em;
+  height: 3em;
+  overflow: visible;
+}
+
+.continueBtn svg rect {
+  width: inherit;
+  height: inherit;
+  fill: rgba(255, 255, 255, 0);
+  stroke: grey;
+  stroke-width: 0;
+  stroke-dasharray: 8em;
+  stroke-dashoffset: 0;
+  -webkit-transition: all 1s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: all 1s cubic-bezier(0.5, 0.2, 0.15, 1);
+}
+
+.continueBtn svg rect:hover {
+  stroke-dasharray: 39em;
+  stroke-width: .2em;
 }
 
 /* GALLERY */
