--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -402,7 +402,7 @@ a:visited {
 
 .card {
   z-index: 5;
-  width: 60em;
+  width: 60vw;
   height: auto;
   margin-left: 10vw;
   margin-top: -18em;
@@ -422,11 +422,12 @@ a:visited {
 .card p {
   margin: 1em 2em 0 0;
   font-size: 1.3em;
-  width: 30em;
+  -webkit-column-count: 2;
+          column-count: 2;
 }
 
 .card img {
-  width: 40em;
+  width: 100%;
   margin: 0 0 1em 0;
   -webkit-box-ordinal-group: 1;
       -ms-flex-order: 0;
@@ -439,21 +440,14 @@ a:visited {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 60em;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-}
-
-.flexText div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: auto;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 100%;
 }
 
 .section-2 {
@@ -762,11 +756,16 @@ a:visited {
     height: 100vh;
   }
   .card {
+    width: 100vw;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 0;
+  }
+  .card p {
+    -webkit-column-count: 1;
+            column-count: 1;
   }
   .card img {
     -webkit-box-ordinal-group: 2;
@@ -775,7 +774,6 @@ a:visited {
     -o-object-fit: contain;
        object-fit: contain;
     height: auto;
-    width: 80vw;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
@@ -785,7 +783,7 @@ a:visited {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
-    width: 15em;
+    width: 100%;
   }
 }
 
