--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -757,6 +757,12 @@ $triangleSize: 6px;
             justify-content: space-between;
             flex-direction: row;
 
+            .btnExpandProj {
+                position: absolute;
+                top: -11vh;
+                left: 0;
+                margin: 0;
+            }
             .circle-btn--container {
                 top: 0; //52vh;
                 position: relative;
@@ -817,7 +823,10 @@ $triangleSize: 6px;
             width: 100%;
         }
 
-
+        #about {
+            //top: 80vh;
+            width: auto;
+        }
 
 
     }
