--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -665,6 +665,9 @@ a:visited {
   h2 {
     font-size: 1.5em;
   }
+  h3 {
+    font-size: 1.5em !important;
+  }
   p {
     font-size: 0.9em;
   }
@@ -699,7 +702,9 @@ a:visited {
     text-align: center;
   }
   .textContainer h3 {
-    padding: 1em 0 0 0;
+    position: absolute;
+    top: 49vh;
+    left: 33vw;
   }
   .textContainer p {
     width: inherit;
@@ -721,9 +726,9 @@ a:visited {
         -ms-flex-order: 3;
             order: 3;
     position: relative;
-    margin: 0 17.5vw;
-    top: -16.66667vh;
-    width: 65vw;
+    margin: 0 6.5vw;
+    top: -18.66667vh;
+    width: 87vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -737,9 +742,15 @@ a:visited {
   }
   .btn--flex .btnExpandProj {
     position: absolute;
-    top: -11vh;
-    left: 0;
+    top: -17vh;
+    left: 20vw;
     margin: 0;
+  }
+  .btn--flex .btnExpandProj svg {
+    top: -3.4em;
+    left: -0.9em;
+    width: 12.5em;
+    height: 2em;
   }
   .btn--flex .circle-btn--container {
     top: 0;
@@ -760,6 +771,16 @@ a:visited {
   /* CARD LAYOUT */
   .colorShift {
     height: 100vh;
+    visibility: hidden !important;
+  }
+  .flexContainer h2 {
+    margin: .8em 1.5em;
+    -webkit-writing-mode: horizontal-tb !important;
+        -ms-writing-mode: lr-tb !important;
+            writing-mode: horizontal-tb !important;
+    text-orientation: upright;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .card {
     width: 100vw;
@@ -793,6 +814,7 @@ a:visited {
   }
   #about {
     width: auto;
+    visibility: hidden !important;
   }
 }
 
