--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -248,9 +248,6 @@ h1 {
 h4 {
     @include parallax(-.85);
 }
-.mosquito {
-    @include parallax(.5);
-}
 
 
 
@@ -267,17 +264,6 @@ h4 {
     flex-direction: column;
     width: 100vw;
     height: auto;
-}
-
-.mosquito {
-    font-size: 1.3em;
-    font-weight: 300;
-    margin: 0;
-    position: absolute;
-    top: 275vh;
-    left: 50.5vw;
-    z-index: 100;
-    color: whitesmoke;
 }
 
 .card {
@@ -318,7 +304,7 @@ h4 {
     width: inherit;
 
     img,video {
-        max-height: 29vw;
+        //max-height: 29vw;
         width: auto;
         margin: 1em;
     }
@@ -392,3 +378,108 @@ h4 {
          transform: rotate3d(0.5, 1, 0, .015deg);
     }
 }
+
+
+
+
+
+
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+
+
+@media only screen 
+  // and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+    $img-height: 75vh; 
+
+    * {
+        //overflow: visible;
+    }
+        body{
+            flex-direction: column;
+            background:     $background-color;
+        }
+
+        h1 {
+            font-size: #{$h1-size - 2};
+            left: -2vw;
+            top: -8vh;
+        }
+        h2 {
+            font-size: #{$h2-size - 1};
+            margin:0;
+        }
+        h3 {        
+            //position: absolute;
+            font-size: 1.75em;
+            left: 77vw;
+            top: 10vh;
+
+            transition: all 1s;
+        }
+        h4 {
+            font-size: $h4-size;
+
+            position: absolute;
+            left: -6vw;
+            top: -10vh;
+        }
+        h5 {
+            font-size: #{$h4-size - 0.2};
+        }
+        p {
+            font-size: $p-size;
+        }
+
+        .galleryNav {
+            left: 0vw;
+            top: -1vh;
+        }
+
+        .flexContainer {
+            top: 30vh;
+        }
+        .card {
+
+            img {
+                max-height: fit-content !important;
+                width: 100vw !important;
+            }
+        }
+        .flexText {
+            padding: 2em 1em;
+        }
+
+        .flexTwo {
+            display: flex;
+            //flex-wrap: wrap;
+            //justify-content: space-between;
+            height: 100vh;
+            width: inherit;
+
+            img,video {
+                //max-height: 29vw;
+                //width: 100vw;
+                margin: 0 0;
+            }
+        }
+
+        .section-2 {
+            width: 85vw;
+        }
+    }
+
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
