--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -109,7 +109,7 @@ a:visited {
 .heyThere {
   visibility: hidden;
   opacity: 0;
-  z-index: 200;
+  z-index: 150;
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -185,6 +185,144 @@ a:visited {
 .continueBtn svg rect:hover {
   stroke-dasharray: 39em;
   stroke-width: .2em;
+}
+
+/* NAVIGATION HAMBURGER */
+/* NAVIGATION HAMBURGER */
+/* NAVIGATION HAMBURGER */
+nav {
+  height: auto;
+  left: 90vw;
+  top: 10vh;
+  position: absolute;
+  z-index: 100;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  /* hide this */
+  z-index: 60;
+  -webkit-touch-callout: none;
+}
+
+/* Just a quick hamburger */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #cdcdcd;
+  border-radius: 3px;
+  z-index: 10;
+  -webkit-transform-origin: 4px 0px;
+          transform-origin: 4px 0px;
+  -webkit-transition: background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menuToggle span:first-child {
+  -webkit-transform-origin: 0% 0%;
+          transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  -webkit-transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
+}
+
+/* Transform all the slices of hamburger into a crossmark */
+#menuToggle input:checked ~ span {
+  -webkit-transform: rotate(45deg) translate(-2px, -1px);
+          transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/* Hide the middle one */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+          transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* Last one should go the other direction */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  -webkit-transform: rotate(-45deg) translate(0, -1px);
+          transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* Make this absolute positioned at the top left of the screen */
+#menu {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: -19px;
+  left: -14px;
+  border-radius: 100%;
+  background-color: whitesmoke;
+  /* to stop flickering of text in safari */
+  will-change: transform;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+/* And let's slide it in from the left */
+#menuToggle input:checked ~ div {
+  -webkit-transform: scale(100);
+          transform: scale(100);
+  background-color: whitesmoke;
+}
+
+.menuItemsContainer {
+  position: absolute;
+  height: auto;
+  width: 100vw;
+  left: -84em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+  z-index: 100;
+  opacity: 0;
+  -webkit-transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+}
+
+.menuItemsContainer p {
+  font-size: 2em;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  letter-spacing: .15em;
+  font-variant: all-small-caps;
+  padding: 1em;
+}
+
+.menuItems-Toggled {
+  visibility: visible;
+  opacity: 1 !important;
 }
 
 /* GALLERY */
@@ -498,7 +636,7 @@ a:visited {
 /* BUTTONS */
 /* BUTTONS */
 .circle-btn--container {
-  z-index: 100;
+  z-index: 50;
   position: absolute;
   top: 89vh;
   opacity: .6;
@@ -593,7 +731,7 @@ a:visited {
   position: absolute;
   left: 76vw;
   top: 86vh;
-  z-index: 100;
+  z-index: 50;
   color: white;
 }
 
@@ -606,7 +744,7 @@ a:visited {
 }
 
 .btnExpandProj svg {
-  z-index: 100;
+  z-index: 50;
   position: relative;
   top: -4.6em;
   left: -.9em;
@@ -637,7 +775,7 @@ a:visited {
   position: absolute;
   left: 2vw;
   top: 90vh;
-  z-index: 100;
+  z-index: 10;
   font-size: 1em;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
