--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -13,7 +13,8 @@ $text-color:    #b3b3b3;
 $background-color:  #000000;
 $test-color-1:  #ecbbbb;
 
-$z-tier4: 100;
+$z-tier5: 100;
+$z-tier4: 50;
 $z-tier3: 15;
 $z-tier2: 10;
 $z-tier1: 5;
@@ -208,6 +209,147 @@ a:visited {
     }
 }
 
+/* NAVIGATION HAMBURGER */
+/* NAVIGATION HAMBURGER */
+/* NAVIGATION HAMBURGER */
+nav {
+    height: auto;
+    left: 90vw;
+    top: 10vh;
+    position: absolute;
+    z-index: $z-tier5;
+}
+
+#menuToggle {
+    
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  //z-index: 2; /* and place it over the hamburger */
+  z-index: $z-tier4+10;
+
+  -webkit-touch-callout: none;
+}
+
+/* Just a quick hamburger */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  //z-index: 1;
+  z-index: $z-tier2;
+
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/* Transform all the slices of hamburger into a crossmark */
+#menuToggle input:checked ~ span {
+  
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/* Hide the middle one */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/* Last one should go the other direction */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/* Make this absolute positioned at the top left of the screen */
+#menu {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: -19px;
+    left: -14px;
+
+    border-radius: 100%;
+    background-color: whitesmoke;
+    //background-color: rgba(255,255,255,0);
+    //-webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    will-change: transform;
+    transform-origin: center;
+   
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+/* And let's slide it in from the left */
+#menuToggle input:checked ~ div {
+  transform: scale(100);
+  background-color: whitesmoke;
+}
+
+
+.menuItemsContainer {
+    position: absolute;
+    height: auto;
+    width: 100vw;
+    left: -84em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    visibility: hidden;
+    //z-index: -100;
+    z-index: $z-tier5;
+
+    opacity: 0;
+    //transition-delay: 10s;
+    transition: opacity $duration-text+1 $bezier;
+
+    //background-color: blue;
+    
+    p {
+        font-size: $h3-size;
+        font-family:  $font-accent;
+        font-weight: 400;
+        letter-spacing: .15em;
+        font-variant: all-small-caps;
+
+        padding: 1em;
+    }
+}
+
+.menuItems-Toggled {
+    visibility: visible;
+    opacity: 1 !important;
+}
 
 
 /* GALLERY */
@@ -636,7 +778,7 @@ $triangleSize: 6px;
     position: absolute;
     left: 2vw;
     top: 90vh;
-    z-index: $z-tier4;
+    z-index: $z-tier2;
 
     font-size: $h4-size;
     font-family: $font-accent;
