--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -311,7 +311,8 @@ nav {
   transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
 }
 
-.menuItemsContainer p {
+.menuItemsContainer a {
+  color: #b3b3b3;
   font-size: 2em;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
