--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -208,7 +208,7 @@ nav {
   cursor: pointer;
   opacity: 0;
   /* hide this */
-  z-index: 60;
+  z-index: 110;
   -webkit-touch-callout: none;
 }
 
@@ -288,24 +288,25 @@ nav {
 
 .menuItemsContainer {
   position: absolute;
-  height: auto;
-  width: 100vw;
-  left: -84em;
+  height: 77vh;
+  width: 30em;
+  left: 0vw;
+  padding: 6em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   visibility: hidden;
-  z-index: 100;
+  z-index: 101;
   opacity: 0;
   -webkit-transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
   transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
@@ -318,7 +319,39 @@ nav {
   font-weight: 400;
   letter-spacing: .15em;
   font-variant: all-small-caps;
-  padding: 1em;
+}
+
+.menuImgContainer {
+  position: absolute;
+  height: auto;
+  width: 50vw;
+  left: 45vw;
+  top: 17vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+  z-index: 101;
+  opacity: 0;
+  -webkit-transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: opacity 1.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+}
+
+#navImg {
+  position: absolute;
+  height: auto;
+  width: 100%;
+  z-index: 101;
 }
 
 .menuItems-Toggled {
