--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -331,10 +331,7 @@ nav {
     z-index: $z-tier5+1;
 
     opacity: 0;
-    //transition-delay: 10s;
-    transition: opacity $duration-text+1 $bezier;
-
-    //background-color: blue;
+    transition: all .1s $bezier .1s;
     
     a {
         color: $text-color;
@@ -343,8 +340,11 @@ nav {
         font-weight: 400;
         letter-spacing: .15em;
         font-variant: all-small-caps;
-
+        transition: transform .4s cubic-bezier(0, 1, 0.35, 1.5);
         //padding: 1em;
+    }
+    a:hover {
+         transform: rotate3d(0.5, 1, 0, 15deg);
     }
 }
 
@@ -355,18 +355,11 @@ nav {
     left: 45vw;
     top: 17vh;
 
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-
     visibility: hidden;
-    //z-index: -100;
     z-index: $z-tier5+1;
 
     opacity: 0;
-    //transition-delay: 10s;
-    transition: opacity $duration-text+1 $bezier;
+    transition: all $duration-text+-.65 $bezier .1s !important;
 }
 
 #navImg {
@@ -381,6 +374,8 @@ nav {
 .menuItems-Toggled {
     visibility: visible;
     opacity: 1 !important;
+
+    transition: all $duration-text+1 $bezier .3s;
 }
 
 
