--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -5,10 +5,6 @@
     Mixins
     Extend/Inheritance
     Operators */
-/* gallery title */
-/* card title */
-/* gallery support text */
-/* card support text */
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
@@ -22,7 +18,7 @@
 canvas {
   z-index: -900;
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -34,56 +30,70 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.5rem;
   color: #37352f;
   background: #ffffff;
 }
 
 h1 {
-  font-size: 5rem;
-  font-weight: 400;
-  color: white;
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #37352f;
+}
+
+h1 span {
+  opacity: .5;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 1.875rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 h3 {
-  font-size: 2rem;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: 400;
-}
-
-h4 {
-  font-size: 1rem;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: 400;
-  letter-spacing: .25em;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
+}
+
+b {
+  font-weight: 600;
+}
+
+.p-header {
+  font-size: 0.875rem;
 }
 
 a {
-  font-size: 1em;
+  color: #37352f;
+  font-size: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-decoration: none;
   text-overflow: ellipsis;
   font-weight: 500;
   line-height: 1.3;
-  border-bottom: 1px solid #5a5a5a;
+  border-bottom: 1px solid rgba(55, 53, 47, 0.347);
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: 3px;
+}
+
+a :hover {
+  background-color: aqua;
 }
 
 a ::before {
@@ -95,96 +105,37 @@ a ::before {
   padding: 0 0;
 }
 
-/* GALLERY */
-/* GALLERY */
-/* GALLERY */
-.section-div {
-  height: 100vh;
-  width: 30vw;
-  margin: 0;
-  background: #ffffff;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
+/* GALLERY PAGE */
+#mouse {
+  position: fixed;
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0);
+  z-index: 100;
+  -webkit-transition: 2s cubic-bezier(0.05, 0.3, 0.5, 0.9);
+  transition: 2s cubic-bezier(0.05, 0.3, 0.5, 0.9);
+  will-change: margin-top, margin-left;
 }
 
-.galleryContainer {
-  left: 30vw;
-  height: 100%;
-  width: 70vw;
-  margin: 0;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
-}
-
-.gallerySlide {
+#galleryLink {
   opacity: 0;
-  -webkit-transition: -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
-  transition: -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
-  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
-  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
-  will-change: clip-path;
-}
-
-.transitionPage {
-  background-color: white;
-  -webkit-transform: scaleX(10) translateX(-100vw);
-          transform: scaleX(10) translateX(-100vw);
-  opacity: 0 !important;
-  -webkit-filter: brightness(2000);
-          filter: brightness(2000);
-  -webkit-transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
-  transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
-  transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms;
-  transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
-}
-
-.animateClipPath {
-  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%) !important;
-          clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%) !important;
-}
-
-#top {
-  opacity: 1;
-  z-index: 10;
   position: absolute;
-  left: 32vw;
-  top: 0;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  will-change: clip-path;
+  margin: 6em 0 0 8em;
+  -webkit-transition: opacity 1s ease-out;
+  transition: opacity 1s ease-out;
 }
 
-#next {
-  opacity: 1;
-  z-index: 0;
+#aboutText {
   position: absolute;
-  left: 32vw;
-  top: 0;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  will-change: clip-path;
+  margin: 15rem 0 0 29rem;
+  max-width: 23rem;
+  display: none;
+  opacity: 0;
+  -webkit-transition: opacity 1s ease-out;
+  transition: opacity 1s ease-out;
 }
 
-.galleryImg {
-  height: 100vh;
-  width: 68vw;
-  -o-object-fit: cover;
-     object-fit: cover;
-  overflow: hidden;
-  cursor: help;
-}
-
-.projectContainer {
+#projectContainer {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -192,47 +143,43 @@ a ::before {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 8em 0 0 8em;
+  margin: 6em 0 0 8em;
 }
 
-.colorShift {
-  z-index: 0;
-  height: 100vh;
-  width: 100vw;
-  top: 100vh;
-  position: absolute;
-  background: white;
+#projectContainer * {
+  -webkit-transition: opacity 1s ease-in;
+  transition: opacity 1s ease-in;
 }
 
-/* CARD LAYOUT */
-/* CARD LAYOUT */
-/* CARD LAYOUT */
-.flexContainer {
-  position: absolute;
-  top: 110vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100vw;
-  height: auto;
+/* PROJECT PAGES */
+header {
+  color: rgba(55, 53, 47, 0.347);
+  padding: 16px;
+  position: fixed;
 }
 
-.flexContainer h2 {
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-  text-orientation: mixed;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+header a {
+  font-size: 0.875rem;
+  font-weight: 400;
 }
 
-#aboutGrouper {
+header a ::before {
+  content: "";
+}
+
+main {
+  max-width: 700px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 150px 40px 230px 40px;
+}
+
+aside {
+  background-color: #f1f1ef;
+  max-width: 100%;
+  padding: 16px;
+  margin: 30px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -242,13 +189,67 @@ a ::before {
           flex-direction: row;
 }
 
-#aboutCard {
-  z-index: 5;
-  width: 60vw;
-  height: auto;
-  /*     margin-left: 10vw;
-    margin-top: -18em; */
+aside ::before {
+  font-size: 1.3125rem;
+  content: "\1f4a1";
+  display: inline-block;
+  margin: 1px 14px 0px 0px;
+}
+
+.caption {
+  font-size: 0.875rem;
+  color: rgba(55, 53, 47, 0.65);
+  margin-top: -17px;
+}
+
+img {
+  max-width: 100%;
+  margin: 0 0 16px 0;
+}
+
+iframe {
+  /* width: 327px;
+    height: 184px; */
+  margin: 0;
+  -ms-flex-item-align: self-start;
+      -ms-grid-row-align: self-start;
+      align-self: self-start;
+}
+
+.flex-row {
+  max-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 45px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   overflow: hidden;
+}
+
+.flex-row p {
+  width: 330px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 60%;
+          flex: 1 1 60%;
+}
+
+.flex-row img {
+  max-width: 40%;
+  -webkit-box-flex: 2;
+      -ms-flex: 2 2 60%;
+          flex: 2 2 60%;
+}
+
+.flex-row div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,29 +257,69 @@ a ::before {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 2 10px;
+          flex: 1 2 10px;
 }
 
-#aboutCard p {
-  margin: 1em 2em 0 0;
-}
-
-#aboutCard img {
+.flex-row div p {
   width: 100%;
-  margin: 0 0 1em 0;
-  -webkit-box-ordinal-group: 1;
-      -ms-flex-order: 0;
-          order: 0;
-  -o-object-fit: contain;
-     object-fit: contain;
+}
+
+.flex-row div img {
+  max-width: 70%;
+}
+
+.jsAdjust img {
+  max-width: 100% !important;
+}
+
+.p-half {
+  max-width: 330px;
+}
+
+.p-full {
+  max-width: 710px;
 }
 
 /* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
+@media (max-width: 800px) {
+  /* and (orientation: portrait) */
+  html {
+    font-size: 16px;
+  }
+  * {
+    color: red;
+  }
+  /* GALLERY PAGE */
+  #projectContainer {
+    margin: 5rem 0 0 3rem;
+  }
+  #galleryLink {
+    margin: 3rem 0 0 3rem;
+  }
+  #aboutText {
+    margin: 6rem 0 0 3rem;
+    max-width: 80%;
+  }
+  /* PROJECT PAGES */
+  main {
+    -ms-flex-item-align: auto;
+        -ms-grid-row-align: auto;
+        align-self: auto;
+  }
+  .flex-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .flex-row p {
+    width: 100%;
+    max-width: 100%;
+  }
+}
 /*# sourceMappingURL=2_gallery_style.css.map */
