--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -171,6 +171,7 @@ header {
     color: rgba(55, 53, 47, 0.347);
     padding: 16px;
     position: fixed;
+    z-index: 999;
 
     a {
         font-size: $p-sm-size;
@@ -282,6 +283,7 @@ iframe {
 .jsAdjust {
     img {
         max-width: 100% !important;
+        object-fit: cover;
     }
 }
 
@@ -310,6 +312,10 @@ iframe {
 
     * {
         //color: red;
+    }
+
+    img {
+        object-fit: cover;
     }
 
 
