--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -337,6 +337,10 @@ iframe {
 
     /* PROJECT PAGES */
 
+    header {
+        width: 100%;
+    }
+
     main {
         align-self: auto;
     }
@@ -347,6 +351,15 @@ iframe {
         p {
             width: 100%;
             max-width: 100%;
+        }
+    }
+
+    .jsAdjust {
+        display: block !important;
+
+        img {
+            max-width: 100% !important;
+            object-fit: cover;
         }
     }
 }
