--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -237,6 +237,12 @@ video {
     height: 25rem;
 }
 
+.cp_embed_iframe {
+    //codepen
+    width: 100%;
+    height: 33rem;
+}
+
 .sketchfab {
     width: 100%;
     height: 25rem;
